<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.main.settings.SettingsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/customization"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/vibrationBlock"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:clickable="true"
            android:focusable="true"
            android:layout_marginTop="1dp"
            android:foreground="?attr/selectableItemBackground"
            android:background="@color/colorPrimary">

            <TextView
                android:id="@+id/labelVibration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/vibration"
                android:textSize="16sp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

            <TextView
                android:id="@+id/textVibration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/vibrate_text"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/labelVibration"
                android:layout_marginTop="5dp"/>

            <Switch
                android:id="@+id/switchVibration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:theme="@style/AppSwitchTheme"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/flashBlock"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:clickable="true"
            android:focusable="true"
            android:layout_marginTop="1dp"
            android:foreground="?attr/selectableItemBackground"
            android:background="@color/colorPrimary">

            <TextView
                android:id="@+id/labelFlash"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/flashlight"
                android:textSize="16sp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

            <TextView
                android:id="@+id/textFlash"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/auto_flashlight_text"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/labelFlash"
                android:layout_marginTop="5dp"/>

            <Switch
                android:id="@+id/switchFlash"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:theme="@style/AppSwitchTheme"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/alert_sound"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"/>

        <LinearLayout
            android:id="@+id/soundsBlock"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:paddingBottom="20dp"
            android:paddingTop="10dp"
            android:layout_marginTop="1dp"
            android:background="@color/colorPrimary">

            <RadioGroup
                android:id="@+id/radioGroupSounds"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </LinearLayout>

    </LinearLayout>


</ScrollView>